# kernelsoul

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README_EN.md  README_zh-CN.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-tests.yml
docs/: Kernelsoul-Overview-EN.html  Kernelsoul-engine-summary.html  Kernelsoul-full-evaluation.html  Kernelsoul-introduction.html  Kernelsoul-v2.3.1-v2.4-comparison.html  Kernelsoul-v2.4-change-report.html  Kernelsoul-v2.4-summary.html  Kernelsoul_Manual_v2.4_EN.md  Kernelsoul_Manual_v2.4_zh-CN.md  NAME_CHANGE_LOG_EN.md  NAME_CHANGE_LOG_zh-CN.md
examples/cyber_test/: character_data.json  character_initstate.json
examples/demon_test/: character_data.json  character_initstate.json
examples/night_hunter/: character.dsl  character_data.json  character_initstate.json  character_lorebook.json  character_rules.json  character_semantic.json  meta_cognition.txt
src/kernelsoul/: __init__.py  ai_bridge.py  api_server.py  character_card_loader.py  context.py  context_wrappers.py  core_engine.py  draft_manager.py  dsl_compiler.py  evolution_trigger.py  game_state.py  memory_manager.py  parser_engine.py  path_resolver.py  phrase_library.py  plugin_manager.py  requirements.txt  rule_compiler.py  semantic_engine.py  semantic_renderer.py  session_meta.py  state_manager.py  (+1 more)
tests/: test_character_loader.py  test_dsl_compiler.py  test_evolution_trigger.py  test_memory.py  test_parser.py  test_phase1.py  test_plugin.py  test_rule_compiler.py  test_saved_drafts.py  test_worldbook.py
(+27 files in other folders)
